add avg
