# docs/swagger.json
@@ -420,7 +420,7 @@
         },
         "/user/monthly-insights": {
             "get": {
-                "description": "Retrieves mental health and physical health data for a specified month",
+                "description": "Retrieves mental health and physical health data for each date within a specified month",
                 "consumes": [
                     "application/json"
                 ],
@@ -430,7 +430,7 @@
                 "tags": [
                     "logEntry"
                 ],
-                "summary": "Fetch monthly insights data",
+                "summary": "Fetch daily insights data for a specified month",
                 "parameters": [
                     {
                         "type": "string",
@@ -451,7 +451,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/logEntry.InsightsResDto"
+                            "$ref": "#/definitions/logEntry.MonthlyInsightsResDto"
                         }
                     }
                 }
@@ -1160,6 +1160,59 @@
                     "type": "string"
                 },
                 "day": {
+                    "type": "string"
+                }
+            }
+        },
+        "logEntry.MonthlyInsightsData": {
+            "type": "object",
+            "properties": {
+                "mentalHealth": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/logEntry.MonthlyMentalHealthRes"
+                    }
+                },
+                "physicalHealth": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/logEntry.MonthlyPhysicalHealthRes"
+                    }
+                }
+            }
+        },
+        "logEntry.MonthlyInsightsResDto": {
+            "type": "object",
+            "properties": {
+                "data": {
+                    "$ref": "#/definitions/logEntry.MonthlyInsightsData"
+                },
+                "message": {
+                    "type": "string"
+                },
+                "status": {
+                    "type": "boolean"
+                }
+            }
+        },
+        "logEntry.MonthlyMentalHealthRes": {
+            "type": "object",
+            "properties": {
+                "avgFeel": {
+                    "type": "number"
+                },
+                "date": {
+                    "type": "string"
+                }
+            }
+        },
+        "logEntry.MonthlyPhysicalHealthRes": {
+            "type": "object",
+            "properties": {
+                "avgPainLevel": {
+                    "type": "number"
+                },
+                "date": {
                     "type": "string"
                 }
             }
